# job_scraper

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/config/: __init__.py  jobs.py  log_config.py
app/helpers/: formatters.py  paginator.py
app/helpers/paginators/: nursing.py  paginator.py
app/models/: jobs.py  nursing.py
app/scraper/: nursing.py  scrape.py
discord_bot/: Dockerfile  pyproject.toml  requirements.txt
discord_bot/app/: main.py
discord_bot/app/config/: __init__.py  discord.py  jobs.py
discord_bot/app/helpers/: formatters.py  nursing.py
discord_bot/app/scraper/: scrape.py
discord_bot/app/tasks/: nursing.py
job_api/: package.json  pnpm-lock.yaml
job_api/src/: app.module.ts  main.ts
job_api/src/config/: configuration.ts
job_api/src/google.sheets/: google.sheets.module.ts  google.sheets.service.spec.ts  google.sheets.service.ts
job_api/src/google.sheets/entities/: google.sheet.entity.ts
job_api/src/jobs/: jobs.controller.ts  jobs.module.ts  jobs.service.ts
job_api/src/jobs/dto/: append-jobs.dto.ts
job_api/src/jobs/entities/: job.entity.ts
