[project]
name = "job-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "discord-py>=2.5.2",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pyopenssl>=25.1.0",
    "python-jobspy>=1.1.80",
]
